[package]
name = "futures-await-test-macro-preview"
version = "0.3.0-alpha.19"
authors = ["Gergely Nagy <ngg@ngg.hu>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["async"]
categories = ["asynchronous", "rust-patterns"]
repository = "https://github.com/ngg/futures-await-test"
homepage = "https://github.com/ngg/futures-await-test"
description = """
Helper crate for futures-await-test-preview.
"""

[badges]
travis-ci = { repository = "ngg/futures-await-test" }

[lib]
name = "futures_await_test_macro"
proc-macro = true

[dependencies]
proc-macro2 = "1.0.0"
quote = "1.0.0"
syn = { version = "1.0.0", features = ["clone-impls", "full", "parsing", "printing", "proc-macro"], default-features = false }
